--- a/common/grid-with-fields-json-editor.html
+++ b/common/grid-with-fields-json-editor.html
@@ -15,7 +15,9 @@
     //----------------------------------------------------------
     var _res={}; try{ _res=JSON.parse(`_vm_res_`);}catch(e){console.log(e);} 
     //----------------------------------------------------------
-    var edit="Json Editor";//$vm.get_file_name(_res.a,"edit").split('.')[0];
+    var edit_module=$vm.get_file_name(_res.a,"edit").split('.')[0]; if(edit_module=="") edit_module="Json Editor";  
+    var add_module=$vm.get_file_name(_res.a,"add").split('.')[0];   if(add_module=="")  add_module="Json Editor";
+
     var headers=[];
     var db_name=[];
     var fields=[];
@@ -50,7 +52,7 @@
         })                
         //------------------------------
         $vm._vm_grid_refresh=load;
-        $vm.query(edit,_res.sid,{rid:rid,record,record,fields:fields,formats:formats,items:items,sid:_res.sid,title:_res.title,refresh:"_vm_grid_refresh"});
+        $vm.query(edit_module,_res.sid,{rid:rid,record,record,fields:fields,formats:formats,items:items,sid:_res.sid,title:_res.title,refresh:"_vm_grid_refresh"});
     }
     //----------------------------------------------------------
     var record_delete=function(event){
@@ -98,8 +100,13 @@
         if(debug) console.log('%c Request:', "color:rgb(255, 255, 0)",req)    
         $vm.request(req).then((res)=>{
             if(debug) console.log('%c Response:', "color:rgb(0, 255, 0)",res);
+            if(res.status=="error"){
+                alert(res.msg);
+                return;
+            }
             if(res.status=="ok"){
                 data=res.data;
+                if(headers.length==0 && data.length>0) headers=fields=Object.keys(data[0]);
                 total=res.total;
                 render(fn);
             }
@@ -108,10 +115,10 @@
     //----------------------------------------------------------
     var fn=100;
     var add=document.getElementById("vm_add__vmID");
-    if(add) add.addEventListener('click', (e) =>  {  $vm._vm_grid_refresh=load; $vm.query(edit,_res.sid,{sid:_res.sid,fields:fields,formats:formats,items:items,refresh:"_vm_grid_refresh"})})
+    if(add) add.addEventListener('click', (e) =>  {  $vm._vm_grid_refresh=load; $vm.query(add_module,_res.sid,{sid:_res.sid,fields:fields,formats:formats,items:items,refresh:"_vm_grid_refresh"})})
     document.getElementById("vm_3all__vmID").addEventListener('click', (e) =>  {    if(fn==3) fn=100; else fn=3;  render(fn);   })
     document.getElementById("vm_load__vmID").addEventListener('click', (e) =>  {    load();    })
-    document.getElementById("vm_export__vmID").addEventListener('click', (e) =>  {   $vm.download_json_to_csv($vm.get_file_name(_res.a,"json").replace('.json','')+".csv",data);  })
+    document.getElementById("vm_export__vmID").addEventListener('click', (e) =>  {   $vm.download_json_to_csv($vm.get_file_name(_res.a,"db").replace('.json.db','')+".csv",data);  })
     document.getElementById("vm_keyword__vmID").addEventListener("keyup", function(e){  if (e.keyCode === 13) { load(fn); }   })
     document.getElementById("vm_page__vmID").addEventListener("keyup", function(e){     if (e.keyCode === 13) { load(fn); }   })
     //----------------------------------------------------------
