--- a/common/grid-with-fields-json-editor.html
+++ b/common/grid-with-fields-json-editor.html
@@ -13,11 +13,16 @@
 <script>
 (function(){
     //----------------------------------------------------------
-    var _res={}; try{ _res=JSON.parse(`_vm_res_`);}catch(e){console.log(e);} 
+    //var _res={}; try{ _res=JSON.parse(`_vm_res_`);}catch(e){console.log(e);} 
     //----------------------------------------------------------
-    var edit_module=$vm.get_file_name(_res.a,"edit").split('.')[0]; if(edit_module=="") edit_module="Json Editor";  
-    var add_module=$vm.get_file_name(_res.a,"add").split('.')[0];   if(add_module=="")  add_module="Json Editor";
+    var this_answer=vm_contents.lastElementChild;
+    var edit_module=$vm.get_file_name(_res._source.content,"edit").split('.')[0]; if(edit_module=="") edit_module="Json Editor";  
+    var add_module=$vm.get_file_name(_res._source.content,"add").split('.')[0];   if(add_module=="")  add_module="Json Editor";
 
+    var content=_res._source.content;
+    var jsonFile="";  try{jsonFile=$vm.get_content_line(content,"db").replace(".db","")}catch(e){};
+    if(jsonFile=="") alert("No database file is setup.")
+    
     var headers=[];
     var db_name=[];
     var fields=[];
@@ -28,7 +33,7 @@
     var debug=true;
     //----------------------------------------------------------
     //set headers, fields, formats and items from setup file
-    _res.a.split('\n').forEach(line=>{
+    _res._source.content.split('\n').forEach(line=>{
         if(line.endsWith(".field")){
             var fs=line.replace(".field",'').split(',');
             for (var i=0; i<fs.length; i++){
@@ -41,12 +46,38 @@
         }
     })
     //----------------------------------------------------------
+    var get_add_edit_module=function(list,title){
+        if(list){
+            for(var i=0;i<list.length;i++){
+                if(list[i].title==title){
+                    return list[i];
+                }
+            }
+        }
+        return "";
+    }
+    //----------------------------------------------------------
     var record_add=function(event){
         $vm._vm_grid_refresh=load; 
-        $vm.query(add_module,_res.sid,{sid:_res.sid,fields:fields,formats:formats,items:items,refresh:"_vm_grid_refresh"})
+        var m=get_add_edit_module(_res.m,add_module);
+        if(m==""){
+            $vm.query(add_module,_res.sid,{sid:_res.sid,fields:fields,formats:formats,items:items, _source:_res._source})
+        }
+        else{
+            var res={}
+            res.a=m.content;
+            res._source=m;
+            res.sid="";
+            res.q="&nbsp;";
+            res.grid_refresh=load
+            $vm.remove_the_following_answer_div(this_answer)
+            if(m.format.split('|')[0]=="html-web-module") $vm.html_web_module(res);
+            if(m.format.split('|')[0]=="spardac") $vm.spardac(res);
+        }
     }
     //----------------------------------------------------------
     var record_edit=function(event){
+        $vm._vm_grid_refresh=load; 
         const rid = event.target.getAttribute('_id');
         //------------------------------
         var record={}
@@ -56,8 +87,21 @@
             }
         })                
         //------------------------------
-        $vm._vm_grid_refresh=load;
-        $vm.query(edit_module,_res.sid,{rid:rid,record,record,fields:fields,formats:formats,items:items,sid:_res.sid,title:_res.title,refresh:"_vm_grid_refresh"});
+        var m=get_add_edit_module(_res.m,edit_module);
+        if(m==""){
+            $vm.query(edit_module,_res.sid,{rid:rid,record:record,fields:fields,formats:formats,items:items,sid:_res.sid,title:_res.title, _source:_res._source});
+        }
+        else{
+            var res={}
+            res.a=m.content;
+            res._source=m;
+            res.sid="";
+            res.q="&nbsp;";
+            res.qp={rid:rid,record:record}
+            $vm.remove_the_following_answer_div(this_answer)
+            if(m.format.split('|')[0]=="html-web-module") $vm.html_web_module(res);
+            if(m.format.split('|')[0]=="spardac") $vm.spardac(res);
+        }
     }
     //----------------------------------------------------------
     var record_delete=function(event){
@@ -65,10 +109,8 @@
         //------------------------------
         if (window.confirm("Are you sure you want to delete this? \r\nid:  "+rid)) {
             //------------------------------
-            var req={cmd:'json-data-delete', rid:rid, sid: _res.sid ,title:_res.title}
-            if(debug) console.log('%c Request:', "color:rgb(255, 255, 0)",req)    
+            var req={cmd:'json-data-delete', rid:rid, jsonFile:jsonFile /*sid: _res.sid ,title:_res.title*/}
             $vm.request(req).then((res)=>{
-                if(debug) console.log('%c Response:', "color:rgb(0, 255, 0)",res);
                 if(res.status=="ok"){
                     load(fn);
                 }
@@ -101,10 +143,9 @@
     var load=function(){
         var keyword=document.getElementById("vm_keyword__vmID").value;
         var page=document.getElementById("vm_page__vmID").value;
-        var req={cmd:'json-data-grid', kw:keyword, pg:page, sid:_res.sid ,title:_res.title}
-        if(debug) console.log('%c Request:', "color:rgb(255, 255, 0)",req)    
+        //var req={cmd:'json-data-grid', kw:keyword, pg:page, sid:_res.sid ,title:_res.title}
+        var req={cmd:'json-data-grid', kw:keyword, pg:page, jsonFile:jsonFile}
         $vm.request(req).then((res)=>{
-            if(debug) console.log('%c Response:', "color:rgb(0, 255, 0)",res);
             if(res.status=="error"){
                 alert(res.msg);
                 return;
@@ -131,7 +172,7 @@
     if(add) add.addEventListener('click', (e) =>  { record_add(e); })
     document.getElementById("vm_3all__vmID").addEventListener('click', (e) =>  {    if(fn==3) fn=100; else fn=3;  render(fn);   })
     document.getElementById("vm_load__vmID").addEventListener('click', (e) =>  {    load();    })
-    document.getElementById("vm_export__vmID").addEventListener('click', (e) =>  {   $vm.download_json_to_csv($vm.get_file_name(_res.a,"db").replace('.json.db','')+".csv",data);  })
+    document.getElementById("vm_export__vmID").addEventListener('click', (e) =>  {   $vm.download_json_to_csv($vm.get_file_name(_res._source.content,"db").replace('.json.db','')+".csv",data);  })
     document.getElementById("vm_keyword__vmID").addEventListener("keyup", function(e){  if (e.keyCode === 13) { load(fn); }   })
     document.getElementById("vm_page__vmID").addEventListener("keyup", function(e){     if (e.keyCode === 13) { load(fn); }   })
     //----------------------------------------------------------
