--- a/common/grid-with-fields-json-editor.html
+++ b/common/grid-with-fields-json-editor.html
@@ -13,13 +13,11 @@
 <script>
 (function(){
     //----------------------------------------------------------
-    //var _res={}; try{ _res=JSON.parse(`_vm_res_`);}catch(e){console.log(e);} 
-    //----------------------------------------------------------
     var this_answer=vm_contents.lastElementChild;
-    var edit_module=$vm.get_file_name(_res._source.content,"edit").split('.')[0]; if(edit_module=="") edit_module="Json Editor";  
-    var add_module=$vm.get_file_name(_res._source.content,"add").split('.')[0];   if(add_module=="")  add_module="Json Editor";
+    var edit_module=$vm.get_file_name(_res._source.module,"edit").split('.')[0]; if(edit_module=="") edit_module="Json Editor";  
+    var add_module=$vm.get_file_name(_res._source.module,"add").split('.')[0];   if(add_module=="")  add_module="Json Editor";
 
-    var content=_res._source.content;
+    var content=_res._source.module;
     var jsonFile="";  try{jsonFile=$vm.get_content_line(content,"db").replace(".db","")}catch(e){};
     if(jsonFile=="") alert("No database file is setup.")
     
@@ -33,7 +31,7 @@
     var debug=true;
     //----------------------------------------------------------
     //set headers, fields, formats and items from setup file
-    _res._source.content.split('\n').forEach(line=>{
+    _res._source.module.split('\n').forEach(line=>{
         if(line.endsWith(".field")){
             var fs=line.replace(".field",'').split(',');
             for (var i=0; i<fs.length; i++){
@@ -172,7 +170,7 @@
     if(add) add.addEventListener('click', (e) =>  { record_add(e); })
     document.getElementById("vm_3all__vmID").addEventListener('click', (e) =>  {    if(fn==3) fn=100; else fn=3;  render(fn);   })
     document.getElementById("vm_load__vmID").addEventListener('click', (e) =>  {    load();    })
-    document.getElementById("vm_export__vmID").addEventListener('click', (e) =>  {   $vm.download_json_to_csv($vm.get_file_name(_res._source.content,"db").replace('.json.db','')+".csv",data);  })
+    document.getElementById("vm_export__vmID").addEventListener('click', (e) =>  {   $vm.download_json_to_csv($vm.get_file_name(_res._source.module,"db").replace('.json.db','')+".csv",data);  })
     document.getElementById("vm_keyword__vmID").addEventListener("keyup", function(e){  if (e.keyCode === 13) { load(fn); }   })
     document.getElementById("vm_page__vmID").addEventListener("keyup", function(e){     if (e.keyCode === 13) { load(fn); }   })
     //----------------------------------------------------------
