--- a/test/sfix-panel-1.html
+++ b/test/sfix-panel-1.html
@@ -5,8 +5,7 @@
 </div>
 <script>
 (async ()=>{
-    //console.log(_res);
-    var this_answer=vm_contents.lastElementChild;
+    var this_module=vm_contents.lastElementChild;
     var txt=""
     for(var i=0; i<_res.m.length; i++){
         if(_res.m[i].format.split('|').pop()=='li'){
@@ -23,11 +22,9 @@
             var q=el.getAttribute('q');
             var res={}
             res._source=_res.m[q];
-            //res.a=_res.m[q].content;
-            res.sid="";
             res.q="&nbsp;";
             res.m=_res.m;
-            $vm.remove_the_following_answer_div(this_answer)
+            $vm.remove_the_following_answer_div(this_module)
             $vm.html_web_module(res);
         });
     });
