--- a/modules/spardac/ess-form.html
+++ b/modules/spardac/ess-form.html
@@ -216,7 +216,7 @@
   </div>
 </div>
   <script>
-      function F__ID(){
+      (function(){
           $('#btn_legend__ID').on('click',function(){
               if($('#btn_legend__ID').text()=='Hide legend'){
                 $('#btn_legend__ID').text('Show legend');
@@ -288,7 +288,8 @@
               return before_submit(data,index);
           }
           //-------------------------------------
-      }
+          m.load();
+      })();    
   </script>
 <style>
     #D__ID .mt-95 {
