--- a/modules/spardac/fss-form.html
+++ b/modules/spardac/fss-form.html
@@ -487,7 +487,7 @@
     </div>
     <script>
         //---------------------------------------------
-        function F__ID(){
+      (function(){
             //-------------------------------------
             VmInclude:__COMPONENT__/f/form.01.js
             VmInclude:__CURRENT_PATH__/shared-form.js
@@ -498,7 +498,8 @@
                  return before_submit(data,index);
              }
             //-------------------------------------
-        }
+          m.load();
+        })();    
     </script>
     <style>
         #D__ID{
