--- a/modules/spardac/login.html
+++ b/modules/spardac/login.html
@@ -34,9 +34,7 @@
 	}
 	
 	button.addEventListener('click',function(e){ login(); })
-	input[1].addEventListener("keyup", function(e){ if (e.keyCode === 13) {  login();  }  
-})
-
+	input[1].addEventListener("keyup", function(e){ if (e.keyCode === 13) {  login();  }  })
 })();
 </script>
 <stype>
