--- a/modules/spardac/tower-london-form.html
+++ b/modules/spardac/tower-london-form.html
@@ -1,4 +1,4 @@
-<div id=thirdparty_container__ID>
+<div id=thirdparty_container__ID style='width: max-content;min-width:700px'>
 	<div class="col-12 col-lg-12 col-md-12 col-sm-12 mx-auto formbox">
 		<div class="row">
 			<div class="col-12">
@@ -29,7 +29,7 @@ Click-and-drag to arrange the coloured balls on the left to match the Goal on th
 	</div>
 </div>
 <script>
-	function F__ID(){
+      (function(){
 /*		
 		//-------------------------------------
 		VmInclude:__COMPONENT__/f/form.01.js
@@ -678,7 +678,8 @@ Click-and-drag to arrange the coloured balls on the left to match the Goal on th
 				return hh+':'+mn+':'+ss;
 			}
 		//------------------------------------
-	}
+          m.load();
+        })();    
 </script>
 <style>
 	#D__ID{
